--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ jspm_packages/
 typings/
 
 # Optional npm cache directory
+package-lock.json
 .npm
 
 # Optional eslint cache
@@ -54,6 +55,7 @@ typings/
 *.tgz
 
 # Yarn Integrity file
+yarn.lock
 .yarn-integrity
 
 # dotenv environment variables file
