--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^3.4.2",
+    "@nuxtjs/vuetify": "^1.11.3",
+    "@types/vue-select": "^3.11.1",
     "@typescript-eslint/parser": "^4.6.1",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
@@ -45,6 +47,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "ts-jest": "^26.4.4",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-select": "^3.11.2"
   }
 }
