--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/dotenv": "^1.4.1",
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-vue": "^25.1.0",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-i18n": "^6.20.4",
