--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@types/node",
-      "nuxt-i18n"
+      "nuxt-i18n",
+      "@nuxtjs/toast",
     ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
