--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nuxt-i18n": "^6.20.4",
     "nuxt-material-design-icons": "^1.0.4",
     "vue-property-decorator": "^8.1.1",
-    "vue-toasted": "^1.1.28"
+    "vue-toasted": "^1.1.28",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
