--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nuxt-material-design-icons": "^1.0.4",
     "vue-property-decorator": "^8.1.1",
     "vue-toasted": "^1.1.28",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-google-maps": "^0.10.7",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
