--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@types/node",
       "nuxt-i18n",
       "@nuxtjs/toast",
+      "@types/vuelidate"
     ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
