--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
       "@types/node",
       "nuxt-i18n",
       "@nuxtjs/toast",
-      "@types/vuelidate"
+      "@types/vuelidate",
+      "@nuxtjs/auth-next",
+      "@types/nuxtjs__auth"
     ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
