--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ag-grid-community": "^25.1.0",
     "ag-grid-vue": "^25.1.0",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "nuxt": "^2.14.12",
     "nuxt-i18n": "^6.20.4",
     "nuxt-material-design-icons": "^1.0.4",
@@ -37,6 +38,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/tailwindcss": "^3.4.2",
+    "@types/lodash": "^4.14.170",
     "@types/nuxtjs__auth": "^4.8.7",
     "@types/vue-select": "^3.11.1",
     "@types/vuelidate": "^0.7.14",
