--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt-material-design-icons": "^1.0.4",
     "vue-property-decorator": "^8.1.1",
     "vue-toasted": "^1.1.28",
+    "vue2-datepicker": "^3.9.1",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.6"
   },
